# AppChat

./: Cargo.toml  docker-compose.yml  readme.md
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
backend/benches/: websocket_benchmark.rs
backend/migrations/: 0006_add_call_tables.sql  0007_add_call_message_types.sql
backend/scripts/: perf_smoke.sh
backend/src/: app_state.rs  main.rs
backend/src/api/: error.rs  messages.rs  mod.rs  success.rs
backend/src/configs/: mod.rs
backend/src/constants/: mod.rs
backend/src/middlewares/: mod.rs
backend/src/modules/: mod.rs
backend/src/modules/call/: handler.rs  model.rs  repository.rs  repository_pg.rs  route.rs  schema.rs  service.rs
backend/src/modules/conversation/: handle.rs  model.rs  repository.rs  repository_pg.rs  route.rs  schema.rs  service.rs
backend/src/modules/file_upload/: handle.rs  model.rs  repository.rs  repository_pg.rs  route.rs  service.rs
backend/src/modules/friend/: handle.rs  repository.rs  repository_pg.rs  route.rs  service.rs
backend/src/modules/message/: handle.rs  model.rs  repository.rs  repository_pg.rs  route.rs  schema.rs  service.rs
backend/src/modules/user/: handle.rs  repository.rs  repository_pg.rs  route.rs  service.rs
backend/src/modules/websocket/: handler.rs  message.rs  mod.rs  presence.rs  server.rs  session.rs
backend/src/observability/: mod.rs
backend/src/tests/: call_test.rs  conversation_test.rs  friend_test.rs  group_management_test.rs  message_test.rs  mod.rs  user_test.rs  ws_server_test.rs
backend/src/tests/mock/: database.rs  mod.rs
backend/src/utils/: mod.rs
docs/: backend-module-notes.md  call-features-plan.md  changelog.md  observability-runbook.md  perf-baseline-latest.md  performance-guidelines.md  phase3-prep.md  (+7 more)
(+111 files in other folders)
