[package]
name = "rewrite"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
actix-files = "0.6.10"
argon2 = { version = "0.5.3", features = ["std"] }
chrono = { version = "0.4.44", features = ["serde"] }
num_cpus = "1.17"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.22.0", features = ["v7", "serde"] }
rand = "0.8"
validator = { version = "0.20.0", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "macros",
  "migrate",
  "tls-rustls",
] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
futures-util = "0.3.32"
async-trait = "0.1.89"
dotenvy = "0.15.7"
deadpool-redis = { version = "0.22.1", features = ["serde"] }
tokio = { version = "1.50.0", features = ["macros"] }
actix-cors = "0.7.1"
actix-ws = "0.3.1"
tracing-subscriber = "0.3.23"
dashmap = "6.1.0"
futures-core = "0.3.32"
actix-multipart = "0.7.2"
tracing = "0.1.44"
rayon = "1.11.0"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "multipart", "rustls-tls"] }
sha1 = "0.10.6"
url = "2.5.8"
